tests/rosetta/out/C/bitmap-flood-fill.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:42Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:42Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static int grid;

static int ff_grid;
static char *ff_repl;
static char *ff_target;
int ff(int px, int py) {
  if (px < 0 || py < 0 || py >= ff_grid.len || px >= ff_grid.data[0].len) {
    return;
  }
  if (ff_grid.data[py].data[px] != ff_target) {
    return;
  }
  grid.data[py].data[px] = ff_repl;
  ff(px - 1, py);
  ff(px + 1, py);
  ff(px, py - 1);
  ff(px, py + 1);
}

int flood(int x, int y, char *repl) {
  __auto_type target = grid.data[y].data[x];
  if ((strcmp(target, repl) == 0)) {
    return;
  }
  (ff_grid = grid, ff_repl = repl, ff_target = target, ff(x, y));
}

int _mochi_main() {
  list_string tmp2 = list_string_create(5);
  tmp2.data[0] = ".";
  tmp2.data[1] = ".";
  tmp2.data[2] = ".";
  tmp2.data[3] = ".";
  tmp2.data[4] = ".";
  list_string tmp3 = list_string_create(5);
  tmp3.data[0] = ".";
  tmp3.data[1] = "#";
  tmp3.data[2] = "#";
  tmp3.data[3] = "#";
  tmp3.data[4] = ".";
  list_string tmp4 = list_string_create(5);
  tmp4.data[0] = ".";
  tmp4.data[1] = "#";
  tmp4.data[2] = ".";
  tmp4.data[3] = "#";
  tmp4.data[4] = ".";
  list_string tmp5 = list_string_create(5);
  tmp5.data[0] = ".";
  tmp5.data[1] = "#";
  tmp5.data[2] = "#";
  tmp5.data[3] = "#";
  tmp5.data[4] = ".";
  list_string tmp6 = list_string_create(5);
  tmp6.data[0] = ".";
  tmp6.data[1] = ".";
  tmp6.data[2] = ".";
  tmp6.data[3] = ".";
  tmp6.data[4] = ".";
  list_int tmp1_data[] = {tmp2, tmp3, tmp4, tmp5, tmp6};
  list_list_int tmp1 = {5, tmp1_data};
  grid = tmp1;
  flood(2, 2, "o");
  for (int tmp7 = 0; tmp7 < grid.len; tmp7++) {
    list_string row = grid.data[tmp7];
    __auto_type line = "";
    for (int tmp8 = 0; tmp8 < row.len; tmp8++) {
      char *ch = row.data[tmp8];
      char *tmp9 = concat_string(line, ch);
      line = tmp9;
    }
    printf("%s\n", line);
  }
  return 0;
}
int main() { return _mochi_main(); }
